[package]
name = "icoutil"
version = "1.0.3"
repository = "https://github.com/SamusAranX/icoutil"
edition = "2021"
rust-version = "1.77.2" # TODO: update to 1.78.0 once the github runners are updated

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
const_format = "0.2.32"
ico = "0.3.0"
image = { version = "0.25.1" }

[build-dependencies]
chrono = "0.4.38"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Use a sane archive format
unix-archive = ".zip"
windows-archive = ".zip"
# Don't upload a redundant source tarball
source-tarball = false
# Publish jobs to run in CI
pr-run-mode = "upload"
